fixing navbar z-index

--- a/src/smithsonian/js/themes/smithsonian/css/metacatui.css
+++ b/src/smithsonian/js/themes/smithsonian/css/metacatui.css
@@ -873,7 +873,6 @@ nav#Navbar {
   width: 100%;
   position: fixed;
   z-index: 5;
-  z-index: calc(var(--map-z-index-feature-info) + 1);
 }
 
 #Navbar .logo {
